change mail link

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 </div>
                 <div class="contact-item">
                     <strong>Email</strong><br>
-                    <a href="mailto:marciotellezro@gmail.com">Marcio Tellez</a>
+                    <a href="mailto:marciotellezro@gmail.com">@gmail</a>
                 </div>
                 <div class="contact-item">
                     <strong>LinkedIn</strong><br>
