link de contactos amarillo

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
             min-width: 200px;
         }
         .contact-item a {
-            color: rgb(96, 13, 13);
+            color: #FFD700;
             text-decoration: none;
         }
         .contact-item a:hover {
-            color: #e0e0e0;
+            color: #FFED4E;
             text-decoration: underline;
         }
         .experience-tag {
