link de contactos turkesa

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
             min-width: 200px;
         }
         .contact-item a {
-            color: #FFD700;
+            color: #26C6DA;
             text-decoration: none;
         }
         .contact-item a:hover {
-            color: #FFED4E;
+            color: #4ECDC4;
             text-decoration: underline;
         }
         .experience-tag {
