--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         }
 
         .contact {
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             align-items: center; 
             text-align: center;
@@ -96,10 +96,8 @@
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-            flex: 1;
             align-items: center; 
             text-align: center;
-            min-width: 200px;
         }
         .contact-item a {
             color: #26C6DA;
