imagenes para experiencia

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </article>
             
             <article class="experience-tag">
-                <img src="ITAM.png" alt="ITAM" class="company-logo">
+                <img src="Hult.jpeg" alt="Hult" class="company-logo">
                 <h3>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</h3>
                 <p>HULT PRIZE - MONTERREY, MEXICO</p>
                 <p>I was developing and pitching an innovative, socially impactful business idea.</p>
@@ -309,6 +309,7 @@
                 <p>Designed and developed Unity-based computer activities for children aged 6–12.</p>
             </article>
             <article class="experience-tag">
+                <img src="ITAM.png" alt="ITAM" class="company-logo">
                 <h3>MECHANIC AND DESIGNER - (SEPTEMBER 2023 - DECEMBER 2024)</h3>
                 <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
                 <p>Worked on the mechanics and design of the car.</p>
