--- a/index.html
+++ b/index.html
@@ -329,26 +329,32 @@
         <section class="card">
             <h2>Education</h2>
             <article class="experience-tag">
+                <img src="ITAM.png" alt="ITAM" class="company-logo">
                 <h3>ENGINEERING SCHOLARSHIP - (2023 - PRESENT DAY)</h3>
                 <p>Bachelor of Mechatronics Engineering<br>Bachelor of Data Science<br>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
             </article>
             <article class="experience-tag">
+                <img src="Unity.png" alt="Unity" class="company-logo">
                 <h3>PATH WITH UNITY - (MAY 2024 – DECEMBER 2025)</h3>
                 <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
             </article>
             <article class="experience-tag">
+                <img src="Epic_lab.jpg" alt="Epic Lab" class="company-logo">
                 <h3>CERTIFICATE IN INNOVATION AT EPIC LAB - (OCTOBER 2024 – NOVEMBER 2024)</h3>
                 <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
             </article>
             <article class="experience-tag">
+                <img src="Botti.png" alt="Botti" class="company-logo">
                 <h3>BACHILLERATO EN ESCUELA DE ARTES - (2019 - 2022)</h3>
                 <p>INSTITUTO BOTTICELLI – CUERNAVACA, MORELOS, MEXICO</p>
             </article>
             <article class="experience-tag">
+                <img src="Gisma.webp" alt="Gisma" class="company-logo">
                 <h3>GERMAN ONLINE CERTIFICATE C1 - (2020 - 2022)</h3>
                 <p>GISMA GLOBAL GMBH - HANNOVER, GERMANY</p>
             </article>
             <article class="experience-tag">
+                <img src="GermanySchool.png" alt="Germany School" class="company-logo">
                 <h3>KLASSE 10 - (2018 - 2019)</h3>
                 <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
             </article>
