imagene escuela alemania

--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
                 <p>GISMA GLOBAL GMBH - HANNOVER, GERMANY</p>
             </article>
             <article class="experience-tag">
-                <img src="GermanySchool.png" alt="Germany School" class="company-logo">
+                <img src="Gymnasium.png" alt="Germany School" class="company-logo">
                 <h3>KLASSE 10 - (2018 - 2019)</h3>
                 <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
-            </article>
+            </article> 
         </section>
 
         <section class="card">
