--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                 <p>Management of payroll and issuance of company invoices.</p>
             </article>  
             <article class="experience-tag">
+                <img src="BCF.png" alt="BCF" class="company-logo">
                 <h3>GENERAL ASSISTANT - (AUGUST 2020 – DECEMBER 2020)</h3>
                 <p>BUSINESS CONSULTING FIRM – MORELOS, MEXICO</p>
                 <p>Support in billing, and review and control of Excel documents.</p>
