--- a/index.html
+++ b/index.html
@@ -145,6 +145,40 @@
             opacity: 0.9;
             font-size: 15px;
         }
+        .project-tag {
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
+            color: white;
+            padding: 18px 25px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+            margin-bottom: 18px;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            text-align: left;
+        }
+        .project-tag h3 {
+            margin: 0;
+            font-size: 18px;
+            font-weight: 700;
+        }
+        .project-tag p {
+            margin: 0;
+            opacity: 0.9;
+            font-size: 15px;
+        }
+        .project-tag a {
+            color: #26C6DA;
+            text-decoration: none;
+            font-weight: 600;
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .project-tag a:hover {
+            color: #4ECDC4;
+            text-decoration: underline;
+        }
         .about-wrapper {
             display: flex;
             align-items: center; 
@@ -303,7 +337,7 @@
                 <p>I was developing and pitching an innovative, socially impactful business idea.</p>
             </article>
             <article class="experience-tag">
-                <img src="ITAM.png" alt="ITAM" class="company-logo">
+                <img src="TERA.png" alt="ITAM" class="company-logo">
                 <h3>PEDAGOGICAL ACTIVITIES PROGRAMMER - (JANUARY 2024 - DECEMBER 2024)</h3>
                 <p>TERA - MEXICO CITY</p>
                 <p>Designed and developed Unity-based computer activities for children aged 6–12.</p>
@@ -359,6 +393,25 @@
                 <h3>KLASSE 10 - (2018 - 2019)</h3>
                 <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
             </article> 
+        </section>
+
+        <section class="card">
+            <h2>Python Projects</h2>
+            <article class="project-tag">
+                <h3>Project Name 1</h3>
+                <p>Description of your Python project. What it does and what technologies you used.</p>
+                <a href="https://github.com/TellezM/project1" target="_blank">View on GitHub →</a>
+            </article>
+            <article class="project-tag">
+                <h3>Project Name 2</h3>
+                <p>Description of your Python project. What it does and what technologies you used.</p>
+                <a href="https://github.com/TellezM/project2" target="_blank">View on GitHub →</a>
+            </article>
+            <article class="project-tag">
+                <h3>Project Name 3</h3>
+                <p>Description of your Python project. What it does and what technologies you used.</p>
+                <a href="https://github.com/TellezM/project3" target="_blank">View on GitHub →</a>
+            </article>
         </section>
 
         <section class="card">
