--- a/index.html
+++ b/index.html
@@ -398,19 +398,37 @@
         <section class="card">
             <h2>Python Projects</h2>
             <article class="project-tag">
-                <h3>Project Name 1</h3>
-                <p>Description of your Python project. What it does and what technologies you used.</p>
-                <a href="https://github.com/TellezM/project1" target="_blank">View on GitHub →</a>
+                <h3>Geospatial Analysis of Vehicular Collisions in NYC</h3>
+                <p>
+                    NYC Vehicular Collision Analysis
+                </p>
+                <ul>
+                    <li>
+                        <strong>Key Role:</strong> Implementation of SQL scripts for data cleaning, normalization (database structure design), and data analysis.
+                    </li>
+                    <li>
+                        <strong>Result:</strong> Generation of an interactive map (HTML) visualizing incident frequency by district, offering crucial insights for formulating road safety policies.
+                    </li>
+                </ul>
+                <a href="https://github.com/Mario200-crypto/Bases-de-Datos" target="_blank">Analysis</a>
             </article>
             <article class="project-tag">
-                <h3>Project Name 2</h3>
-                <p>Description of your Python project. What it does and what technologies you used.</p>
-                <a href="https://github.com/TellezM/project2" target="_blank">View on GitHub →</a>
-            </article>
-            <article class="project-tag">
-                <h3>Project Name 3</h3>
-                <p>Description of your Python project. What it does and what technologies you used.</p>
-                <a href="https://github.com/TellezM/project3" target="_blank">View on GitHub →</a>
+                <h4>Pedagogical XR Game Development (Unity/C#)</h4>
+                <p>
+                    As a Pedagogical Activities Programmer, I designed and developed augmented and virtual reality (XR) educational games using the Unity engine and C#. The content was specifically tailored for children aged 6 to 10 years old.
+                </p>
+                <ul>
+                    <li>
+                        <strong>Focus:</strong> Applied software development principles (C# scripting) and user-centric design to create engaging, learning-based experiences.
+                    </li>
+                    <li>
+                        <strong>Technologies Used:</strong> Unity 3D, C#, Vuforia (AR framework), Git version control.
+                    </li>
+                    <li>
+                        <strong>Contribution:</strong> Managed technical documentation, project structure, and troubleshooting for package dependencies, ensuring a stable development pipeline for the TERA platform.
+                    </li>
+                </ul>
+                <a href="https://github.com/TERAlabTECH/TERATech" target="_blank">View on GitHub →</a>
             </article>
         </section>
 
