cambiar titulo a Github Projects

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         </section>
 
         <section class="card">
-            <h2>Python Projects</h2>
+            <h2>GitHub Projects</h2>
             <article class="project-tag">
                 <h3>Geospatial Analysis of Vehicular Collisions in NYC</h3>
                 <p>
