change links name

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <strong>Result:</strong> Generation of an interactive map (HTML) visualizing incident frequency by district, offering crucial insights for formulating road safety policies.
                     </li>
                 </ul>
-                <a href="https://github.com/Mario200-crypto/Bases-de-Datos" target="_blank">Analysis</a>
+                <a href="https://github.com/Mario200-crypto/Bases-de-Datos" target="_blank">View Repository</a>
             </article>
             <article class="project-tag">
                 <h4>Pedagogical XR Game Development (Unity/C#)</h4>
@@ -428,7 +428,7 @@
                         <strong>Contribution:</strong> Managed technical documentation, project structure, and troubleshooting for package dependencies, ensuring a stable development pipeline for the TERA platform.
                     </li>
                 </ul>
-                <a href="https://github.com/TERAlabTECH/TERATech" target="_blank">View on GitHub →</a>
+                <a href="https://github.com/TERAlabTECH/TERATech" target="_blank">View Repository</a>
             </article>
         </section>
 
