Agregar Proyecto calculadora

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <article class="project-tag">
                 <h3>Geospatial Analysis of Vehicular Collisions in NYC</h3>
                 <p>
-                    NYC Vehicular Collision Analysis
+                    Analysis of a massive 2-million record dataset on NYPD motor vehicle accidents. The objective was to identify patterns of risk, severity, and contributing factors to improve road safety in New York.
                 </p>
                 <ul>
                     <li>
@@ -429,6 +429,21 @@
                     </li>
                 </ul>
                 <a href="https://github.com/TERAlabTECH/TERATech" target="_blank">View Repository</a>
+            </article>
+            <article class="project-tag">
+                <h3>Calculator</h3>
+                <p>
+                    Built a fully functional desktop calculator in Java, applying object-oriented design to structure arithmetic operations, state handling, and the Swing-based user interface.
+                </p>
+                <ul>
+                    <li>
+                        <strong>Implementation:</strong> Encapsulated core math logic in reusable classes and wired a responsive UI with Java Swing components.
+                    </li>
+                    <li>
+                        <strong>Features:</strong> Supports chained operations, clear/reset actions, and error handling for invalid inputs.
+                    </li>
+                </ul>
+                <a href="https://github.com/aguayo-0107/Calculadora" target="_blank">View Repository</a>
             </article>
         </section>
 
