--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
             color: #4ECDC4;
             text-decoration: underline;
         }
+        footer {
+            text-align: center;
+            color: #04050b;
+            background: #ffffff;
+            padding: 20px 0;
+            margin-top: 40px;
+            border-radius: 10px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+        }
         .about-wrapper {
             display: flex;
             align-items: center; 
@@ -470,7 +479,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2024 Marcio Tellez. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Marcio E. Tellez. Todos los derechos reservados.</p>
         </footer>
     </div>
 </body>
