--- a/index.html
+++ b/index.html
@@ -181,12 +181,9 @@
         }
         footer {
             text-align: center;
-            color: #04050b;
-            background: #ffffff;
+            color: #ffffff;
             padding: 20px 0;
             margin-top: 40px;
-            border-radius: 10px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.15);
         }
         .about-wrapper {
             display: flex;
