quitar @ de gmail

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 </div>
                 <div class="contact-item">
                     <strong>Email</strong><br>
-                    <a href="mailto:marciotellezro@gmail.com">gmail</a>
+                    <a href="mailto:marciotellezro@gmail.com">Gmail</a>
                 </div>
                 <div class="contact-item">
                     <strong>LinkedIn</strong><br>
