--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         }
         .about-wrapper {
             display: flex;
-            align-items: center; 
+            align-items: stretch; 
             gap: 30px;       
             width: 100%;
             justify-content: flex-start;
@@ -211,8 +211,8 @@
         }
 
         .about-photo {
-            width: 180px;  
-            height: 260px;
+            width: 35%;  
+            height: 100%;
             object-fit: cover; 
             border-radius: 10px; 
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
