--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <div class="container">
         <header>
             <h1>Marcio Tellez</h1>
-            <p>Welcome</p>
+            <p>People aren't happy because they win, they win because thay are happy</p>
         </header>
 
         <div class="about-wrapper">
