--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
                 <div class="skill-category">
                     <h3>Databases</h3>
-                    <span class="skill-tag">MySQL</span>
+                    <span class="skill-tag">SQL</span>
                     <span class="skill-tag">PostgreSQL</span>
                     <span class="skill-tag">MongoDB</span>
                     <span class="skill-tag">Cassandra</span>
