--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
             </article>
             <article class="experience-tag">
                 <img src="Botti.png" alt="Botti" class="company-logo">
-                <h3>BACHILLERATO EN ESCUELA DE ARTES - (2019 - 2022)</h3>
+                <h3>ARTS HIGH SCHOOL - (2019 - 2022)</h3>
                 <p>INSTITUTO BOTTICELLI – CUERNAVACA, MORELOS, MEXICO</p>
             </article>
             <article class="experience-tag">
@@ -997,7 +997,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2025 Marcio E. Tellez. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Marcio E. Tellez. All rights reserved.</p>
         </footer>
         </div>
         
