--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
         
         .about-wrapper {
             display: flex;
-            align-items: flex-start; 
+            align-items: center;   /* ✔ Alinea imagen y texto a la misma altura */
             gap: 48px;       
             width: 100%;
         }
