--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
         
         .about-wrapper {
             display: flex;
-            align-items: center;   /* ✔ Alinea imagen y texto a la misma altura */
+            align-items: flex-start; 
             gap: 48px;       
             width: 100%;
         }
@@ -679,7 +679,7 @@
         .about-photo {
             width: 320px;
             height: auto;
-            max-height: 450px;
+            max-height: 500px;
             object-fit: cover; 
             border-radius: 18px; 
             box-shadow: var(--shadow-lg), var(--shadow-glow);
