margen entre nombre y profesion

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             font-size: 3.5rem;
             font-weight: 800;
             letter-spacing: -0.03em;
-            margin-bottom: 12px;
+            margin-bottom: 5px;
             color: var(--text-primary);
             text-shadow: 0 2px 20px var(--accent-glow);
             position: relative;
@@ -859,7 +859,7 @@
         <div class="container">
         <header>
             <h1>Marcio Tellez</h1>
-            <p class="subtitle">Engineering and Data Science Student</p>
+            <p class="subtitle">Mechatronics Engineering and Data Science Student</p>
             <p>People aren't happy because they win, they win because thay are happy</p>
             <a href="#contact" class="contact-btn">Contact Me</a>
         </header>
