about me mas formal

--- a/index.html
+++ b/index.html
@@ -858,9 +858,9 @@
     <div class="main-wrapper">
         <div class="container">
         <header>
-            <h1>Marcio Tellez</h1>
+            <h1>Marcio Eduardo Tellez Rodriguez</h1>
             <p class="subtitle">Mechatronics Engineering and Data Science Student</p>
-            <p>People aren't happy because they win, they win because thay are happy</p>
+            <p>People aren't happy because they win, they win because the|y are happy</p>
             <a href="#contact" class="contact-btn">Contact Me</a>
         </header>
 
@@ -868,12 +868,12 @@
             <section class="card about-card">
                 <h2 class="section-title about-title">About me</h2>
                 <div class="about-tag">
-                    <p>Since I was a child, I wanted to be part of a team who 
-                        can innovate and make a better world, 
-                        not only within technology but also as a society. 
-                        I've always been in love with sports, especially motor sports and cars. 
-                        As in today I look forward to finding a workplace where 
-                        I can show my skills and help however I can.
+                    <p>Since I was young, I have aimed to be part of a team that contributes 
+                        to innovation and drives meaningful progress, both in technology 
+                        and in society. I have a strong interest in sports—particularly 
+                        motorsports and automotive engineering. Today, I am focused on 
+                        finding a workplace where I can apply my skills effectively, 
+                        continue learning, and contribute value in a professional environment.
                     </p>
                 </div>
             </section>
