about me mas formal

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
         <header>
             <h1>Marcio Eduardo Tellez Rodriguez</h1>
             <p class="subtitle">Mechatronics Engineering and Data Science Student</p>
-            <p>People aren't happy because they win, they win because the|y are happy</p>
+            <p>People aren't happy because they win, they win because they are happy</p>
             <a href="#contact" class="contact-btn">Contact Me</a>
         </header>
 
