--- a/index.html
+++ b/index.html
@@ -641,6 +641,8 @@
         .about-wrapper {
             display: flex;
             align-items: flex-start; 
+            text-align: justify;
+            text-justify: inter-word;
             gap: 18px;       
             width: 100%;
         }
